package edu.fiuba.algo3.modelo;

public interface Tarotable {
    void applyTarot(TarotApply tarot);
}
